- changed redirection method to userdata, also affected how id is passed.
- added alert for CUD

- added feature to reset user password

- added feature to upload excel for list pekerjaan

- changed map marker icons to use MapKeyIcons with Leaflet Icon Glyph plugin