@@ -38,8 +38,8 @@ class Manage extends CI_Controller {
 					$data['all_user'][$u]['userLevel']='Pengguna Lain';
 				}
 				$data['idModal'] = $row['uid'];
-				$data['modal'][$row['uid']] = $this->load->view('masuk/modal/modal_delete', $data, TRUE);
-				$data['modalR'][$row['uid']] = $this->load->view('masuk/modal/modal_reset', $data, TRUE);
+				$data['modal'][$row['uid']] = $this->load->view('modal/modal_delete', $data, TRUE);
+				$data['modalR'][$row['uid']] = $this->load->view('modal/modal_reset', $data, TRUE);
 				$u++;
 			}
 			if ($this->session->flashdata('message')) {
