@@ -6,3 +6,4 @@
 - added feature to upload excel for list pekerjaan
 
 - changed map marker icons to use MapKeyIcons with Leaflet Icon Glyph plugin
+- changed to properly use modal on important warning, not just notification
